# entropy-lens

./: .gitignore  LICENSE  README.md  pyproject.toml
demo/: app.py  requirements.txt
experiments/: caldera_integration_plan.md  compare_alpha_pruning.py  heal_pipeline.py  joint_alloc_validate.py  joint_alloc_validation.md  runpod_ablation.py  runpod_caldera.py  runpod_inmemory.sh  runpod_mistral7b.sh  runpod_step2.sh  runpod_v3.py  runpod_v4.py  runpod_v5.py  spike_svdvals.py  validate_7b.py
paper/: paper3_scaling.tex  references.bib
results/Qwen_Qwen2-7B/: report_Qwen_Qwen2-7B.json  results.csv
results/gpt2/: alloc_entropy_80.json  report_openai-community_gpt2.json  results.csv
results/mistralai_Mistral-7B-v0.3/: ablation_analysis.md  ablation_correlations.json  ablation_per_layer.csv  report.json  results.csv  results_v5_fit.json  results_v5_whitened.csv  results_v5b_fit.json  results_v5b_whitened.csv  runpod_v3_heal_results.json
results/openai-community_gpt2/: report_openai-community_gpt2.json  results.csv
src/entropy_lens/: __init__.py  allocator.py  cli.py  compress.py  extract.py  heal.py  joint_alloc.py  law.py  lplr.py  report.py  spectral.py  whiten.py
src/entropy_lens/arch/: __init__.py  auto.py  base.py  gpt2.py  llama.py  phi.py
tests/: test_allocator.py  test_compress.py  test_extract.py  test_heal.py  test_joint_alloc.py  test_lplr.py  test_spectral.py  test_whiten.py
