[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "entropy-lens"
version = "0.1.0"
description = "Validate the Entropy-Compression Law across LLM architectures"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Nicolas Calderon Gonzalez"},
]

dependencies = [
    "torch>=2.1",
    "numpy",
    "scipy",
    "safetensors>=0.4",
    "transformers>=4.36",
    "click>=8.0",
    "matplotlib",
    "tqdm",
    "huggingface-hub>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "psutil",
]

[project.scripts]
entropy-lens = "entropy_lens.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
